# kami-data-analisys

./: .gitignore  pyproject.toml
kami_data_analisys/: rfv_classification.ipynb
