[tool.poetry]
name = "kami-data-analisys"
version = "0.1.0"
description = ""
authors = ["Maicon de Menezes <maicon@kamico.com.br>"]
readme = "README.md"
packages = [{include = "kami_data_analisys"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
kami-uno-database = "^0.1.7"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
ipython = "^8.14.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
nbformat = "^5.9.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint-review = "blue --check --diff . && isort --check --diff ."
lint-fix = "blue . && isort ."
pre_test = "task lint-review"
test = "pytest -s -x --cov=kami_data_analisys -vv -rs"
post_test = "coverage html"
docs = "mkdocs serve"
